✨ Add date statistics endpoint and fix minor bug
